--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,16 +1,23 @@
 {
+    "manifest_version": 2,
     "name": "tabHero",
     "version": "0.1.0",
-    "description": "Build an Extension!",
+    "description": "A chrome extension for managing your tabs",
     "permissions": [
-      "activeTab",
-      "declarativeContent",
-      "storage",
-      "tabs",
-      "unlimitedStorage"
+        "activeTab",
+        "declarativeContent",
+        "storage",
+        "tabs",
+        "unlimitedStorage"
     ],
     "browser_action": {
-    	"default_popup": "index.html"
+        "default_popup": "index.html"
     },
-    "manifest_version": 2
-  }
+    "commands": {
+        "_execute_browser_action": {
+            "suggested_key": {
+                "default": "Alt+Shift+T"
+            }
+        }
+    }
+}
