--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@storybook/svelte": "^5.3.18",
     "babel-loader": "^8.1.0",
     "rollup": "^1.20.0",
+    "rollup-plugin-inject-process-env": "^1.3.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
     "rollup-plugin-terser": "^5.1.2",
@@ -26,6 +27,7 @@
   },
   "dependencies": {
     "lodash-es": "^4.17.15",
+    "nanoid": "^3.1.12",
     "normalize-url": "^5.0.0",
     "sirv-cli": "^0.4.4",
     "uuid": "^8.3.0"
