--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "lodash-es": "^4.17.15",
     "nanoid": "^3.1.12",
     "normalize-url": "^5.0.0",
-    "sirv-cli": "^0.4.4",
-    "uuid": "^8.3.0"
+    "sirv-cli": "^0.4.4"
   }
 }
