--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lodash-es": "^4.17.15",
     "nanoid": "^3.1.12",
     "normalize-url": "^5.0.0",
-    "sirv-cli": "^0.4.4"
+    "sirv-cli": "^0.4.4",
+    "svelte-routing": "^1.4.2"
   }
 }
